# whirl

./: pyproject.toml
examples/: 2_silver.ipynb  3_gold.ipynb
examples/.ipynb_checkpoints/: 1_bronze-checkpoint.ipynb  dag_example-checkpoint.yaml
src/whirl/: cli.py  core.py  main.py
tests/: dag_valid.yaml
