[project]
name = "whirl"
version = "0.1.0"
description = "Simple orchestration tool for ipynb notebooks"
authors = [
    {name = "Vojtech Mikes"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml (==6.0.3)",
    "networkx[default] (==3.5)",
    "nbclient (==0.10.2)",
    "nbformat (==5.10.4)",
    "ipykernel (==6.30.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (==25.9.0)",
]
